# mailpeter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: mailpeter.service  mailpeter.toml
debian/: postinst
scrips/: build.sh
src/: main.rs
src/api/: routes.rs
src/utils/: arg_parser.rs  config.rs  errors.rs  ip_extrator.rs  logging.rs  mailer.rs  mod.rs
