[package]
name = "mailpeter"
description = "Simple mailer and API for contact forms"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jb-alvarado/mailpeter"
authors = ["Jonathan Baecker"]

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
actix-web = "4"
actix-governor = "0.4"
clap = { version = "4.3", features = ["derive"] }
derive_more = "0.99"
fast_log = { version = "1.6", features = ["gzip"] }
fastdate = "0.3"
file-rotate = "0.7"
html_parser = "0.7"
lazy_static = "1.4"
lettre = { version = "0.11", features = [
    "builder",
    "tokio1-rustls-tls",
    "smtp-transport",
], default-features = false }
log = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"


# DEBIAN DEB PACKAGE
[package.metadata.deb]
name = "mailpeter"
priority = "optional"
section = "net"
license-file = ["LICENSE", "0"]
depends = ""
copyright = "Copyright (c) 2023, Jonathan Baecker. All rights reserved."
conf-files = ["/etc/mailpeter/mailpeter.toml"]
assets = [
    [
        "./target/x86_64-unknown-linux-musl/release/mailpeter",
        "/usr/bin/",
        "755",
    ],
    [
        "./assets/mailpeter.service",
        "/lib/systemd/system/",
        "644",
    ],
    [
        "./assets/mailpeter.toml",
        "/etc/mailpeter/",
        "644",
    ],
]
maintainer-scripts = "./debian/"
systemd-units = { enable = false, unit-scripts = "./assets" }

[package.metadata.deb.variants.arm64]
assets = [
    [
        "./target/aarch64-unknown-linux-gnu/release/mailpeter",
        "/usr/bin/",
        "755",
    ],
    [
        "./assets/mailpeter.service",
        "/lib/systemd/system/",
        "644",
    ],
    [
        "./assets/mailpeter.toml",
        "/etc/mailpeter/",
        "644",
    ],
    [
        "./LICENSE",
        "/usr/share/doc/mailpeter/",
        "644",
    ],
]
maintainer-scripts = "./debian/"
systemd-units = { enable = false, unit-scripts = "./assets" }

# REHL RPM PACKAGE
[package.metadata.generate-rpm]
name = "mailpeter"
license = "MIT"
assets = [
    { source = "./target/x86_64-unknown-linux-musl/release/mailpeter", dest = "/usr/bin/mailpeter", mode = "755" },
    { source = "./assets/mailpeter.toml", dest = "/etc/mailpeter/mailpeter.toml", mode = "644", config = true },
    { source = "./assets/mailpeter.service", dest = "/lib/systemd/system/mailpeter.service", mode = "644" },
    { source = "./LICENSE", dest = "/usr/share/doc/mailpeter/LICENSE", mode = "644" },
    { source = "./debian/postinst", dest = "/usr/share/mailpeter/postinst", mode = "755" },
]
auto-req = "no"
post_install_script = "/usr/share/mailpeter/postinst"
